--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ plugins {
     alias(libs.plugins.android.application) apply false
     alias(libs.plugins.jetbrains.kotlin.android) apply false
     id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
 
 task clean(type: Delete) {
